# amperion_task

./: .flake8  .gitignore  README.md  analysis.ipynb  crontab_etl_script.py  docker-compose.yaml
.github/workflows/: run-linter.yml  run-tests.yml
jupyter/: Dockerfile  requirements.txt
scripts/: init-db.sql
tomorrow_app/: .dockerignore  Dockerfile  locations.json  main.py  pyproject.toml
tomorrow_app/tests/: test_transform_row.py
