[project]
name = "tomorrow-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2024.11.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=18.0.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
]
